--- a/package.json
+++ b/package.json
@@ -9,6 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.5"
+    "@astrojs/vercel": "^8.0.0",
+    "@types/axios": "^0.14.4",
+    "@types/marked": "^6.0.0",
+    "astro": "^5.0.5",
+    "axios": "^1.7.9",
+    "marked": "^15.0.3"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^5.1.3",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
   }
 }
